part3/ingress/exerciseingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ing
  namespace: exercises
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pong-svc
                port:
                  number: 2350
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logger-svc
                port:
                  number: 2345
